objects/FloorManager__mdt/FloorManager__mdt.object-meta.xml
<CustomObject>
    <label>FloorManager</label>
    <pluralLabel>FloorManagers</pluralLabel>
</CustomObject>