objects/FloorManager__mdt/fields/First_is_Sunday__c.field-meta.xml
<CustomField>
    <fullName>First_is_Sunday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First is Sunday</label>
    <type>Checkbox</type>
</CustomField>