objects/FloorManager__mdt/fields/Hierarchy_Depth__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Depth__c</fullName>
    <defaultValue>5</defaultValue>
    <label>HierarchyDepth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>