objects/FloorManager__mdt/fields/include_Holidays__c.field-meta.xml
<CustomField>
    <fullName>include_Holidays__c</fullName>
    <defaultValue>false</defaultValue>
    <label>include Holidays</label>
    <type>Checkbox</type>
</CustomField>