objects/FloorManager__mdt/fields/Line_Width__c.field-meta.xml
<CustomField>
    <fullName>Line_Width__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Line Width</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>