objects/FloorManager__mdt/fields/NumOfWeeks__c.field-meta.xml
<CustomField>
    <fullName>NumOfWeeks__c</fullName>
    <defaultValue>1</defaultValue>
    <label>NumOfWeeks</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>