objects/FloorManager__mdt/fields/Time_Step_Unit__c.field-meta.xml
<CustomField>
    <fullName>Time_Step_Unit__c</fullName>
    <description>Defines the steps in minutes</description>
    <label>Time Step Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>