objects/FloorManager__mdt/fields/Working_Hours_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_End_Time__c</fullName>
    <description>Minutes past midnight
for example 6PM = 1080</description>
    <inlineHelpText>Minutes past midnight</inlineHelpText>
    <label>Working Hours End Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>