objects/FloorManager__mdt/fields/Working_Hours_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_Start_Time__c</fullName>
    <description>Minutes past Midnight
for example 9AM = 540</description>
    <inlineHelpText>Minutes past Midnight</inlineHelpText>
    <label>Working Hours Start Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>